@@ -10,7 +10,7 @@
     <refmiscinfo class='manual'>Rivendell C Library Manual</refmiscinfo>
   </refmeta>
   <refnamediv>
-    <refname>RD_AddCut</refname>
+    <refname>addcut</refname>
     <refpurpose>Rivendell Add Cut C Library Function</refpurpose>
   </refnamediv>
   <info>
