@@ -10,7 +10,7 @@
     <refmiscinfo class='manual'>Rivendell C Library Manual</refmiscinfo>
   </refmeta>
   <refnamediv>
-    <refname>RD_RemoveCut</refname>
+    <refname>removecut</refname>
     <refpurpose>Rivendell Remove Cut C Library Function</refpurpose>
   </refnamediv>
   <info>
